@@ -1745,9 +1745,9 @@ static int m_message(cptr, sptr, parc, parv, notice)
 					    stripbadwords_message(parv[2]));
 				else
 #endif
-					sendto_prefix_one(acptr, sptr,
-					    ":%s %s %s :%s", parv[0], cmd, nick,
-					    parv[2]);
+					sendto_message_one(acptr,
+						sptr, parv[0], cmd,
+						nick, parv[2]);
 			}
 			continue;
 		}
